--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pathlib>=1.0.1",
     "pip>=25.2",
     "python-dotenv>=1.1.1",
+    "pyvis>=0.3.2",
     "streamlit>=1.50.0",
     "wordcloud>=1.9.4",
 ]
