--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY='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'
+OPENAI_API_KEY='Sua-Senha'
 OPENAI_MODEL=gpt-4.1-mini
 OPENAI_TEMPERATURE=0.2
 OPENAI_MAX_TOKENS=400
