--- a/app/.yaml
+++ b/app/.yaml
@@ -1,3 +1,12 @@
+services:
+  streamlit:
+    container_name: "server_api"
+    build:
+      dockerfile: ./Dockerfile
+      context: ./
+    ports:
+      - '8501:8501'
+
 version: "3.9"
 
 services:
